usermanager double scroll fixed

--- a/src/scss/dedicated-bundles/gis-usermanager/usermanager.scss
+++ b/src/scss/dedicated-bundles/gis-usermanager/usermanager.scss
@@ -23,6 +23,9 @@
           @media screen and (min-width: 1600px) {
             max-width: 1700px;
           }
+          #primaryNav {
+            width: auto !important;
+          }
           .navbar-header {
             > a {
               display: block;
@@ -77,6 +80,9 @@
       .gccMainLayout {
         margin: 0;
         background-color: rgba(255,255,255,.8);
+        > .row {
+          margin: 0;
+        }
         .page-header, label {
           color: $text-color;
           font-size: $default-font-size;
